issue 567, issue 619 - fix field-list group navigations and view refresh after returning from intents.